[package]
name = "system"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
processor = { path = "../processor"}
lazy_static = "1.4.0"

[features]
nes = ["processor/m6502x"]
gb = ["processor/z80]